# KonlSearch

./: README.md  pyproject.toml
.github/workflows/: tests.yml
konlsearch/: counter.py  dict.py  index.py  inverted_index.py  lock.py  log.py  search.py  set.py  trie.py  utility.py
test/: kowiki.py  test_konlsearch.py  test_utility.py
