[tool.poetry]
name = "konlsearch"
version = "0.1.0"
description = ""
authors = ["Byoung Gi Lee <handrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rocksdict = "^0.3.23"
python-mecab-ko = "^1.3.7"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
