[tool.poetry]
name = "konlsearch"
version = "0.0.1"
description = ""
authors = ["Byoung Gi Lee <handrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rocksdict = "^0.3.23"
python-mecab-ko = "^1.3.7"
pytest = "^8.3.2"
hgtk = "^0.2.1"
pytest-profiling = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
