[tool.poetry]
name = "konlsearch"
version = "0.0.2-alpha"
description = ""
authors = ["Byoung Gi Lee <handrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rocksdict = "^0.3.23"
python-mecab-ko = "^1.3.7"
pytest = "^8.3.2"
hgtk = "^0.2.1"
pytest-profiling = "^1.7.0"
strenum = "^0.4.15"
flake8 = "^7.1.1"
typing-extensions = "^4.12.2"
xxhash = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
